# Library-Management-System

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LMS_Dataset.csv  Makefile  Person.hpp  README.md  catalogue.json  cmake_install.cmake  test
header/: AlphabeticalSort.hpp  Book.hpp  BookSearch.hpp  BookSort.hpp  BookSystem.hpp  Bundle.hpp  CheckOutData.hpp  Content.hpp  DisplaySystem.hpp  FrequencySort.hpp  GenreSearch.hpp  ISBNSearch.hpp  KeyWordSearch.hpp  Librarian.hpp  LibrarySystem.hpp  LoginSystem.hpp  Person.hpp  User.hpp  UserSystem.hpp
program_files/: catalogue.json  checked_out.json  userInfo.json
src/: AlphabeticalSort.cpp  Book.cpp  BookSystem.cpp  Bundle.cpp  DisplaySystem.cpp  FrequencySort.cpp  GenreSearch.cpp  ISBNSearch.cpp  KeyWordSearch.cpp  Librarian.cpp  LibrarySystem.cpp  LoginSystem.cpp  SubgenreSearch.cpp  User.cpp  UserSystem.cpp  main.cpp
tests/: BookSystemTests.hpp  BookTests.hpp  BundleTests.hpp  LibrarySystemTests.hpp  LoginSystemTests.hpp  PersonTests.hpp  SearchTests.hpp  SortTests.hpp  UserSystemTests.hpp  output.json  test_checked_out.json  tests.cpp
tests/test_files/: output.json  test_catalogue.json  test_checked_out.json  test_user_pass.txt  test_users.json
